--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -40,9 +40,12 @@
 </head>
 <body>
     <div class="sidenav">
-        <a href="home/">Home</a>
-        <a href="login/">Login</a>
-        <a href="register/">Register</a>
+        <a href="/home/">Home</a>
+        <a href="/login/">Login</a>
+        <a href="/register/">Register</a>
+        {% if user.is_authenticated %}
+        <a href="/logout/">Log out</a>
+        {% endif %}
     </div>
 
     <div id=content", name="content", class="main">
