--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -1,9 +1,12 @@
 {% extends "main/base.html" %}
 {% block title %} Create an account{% endblock %}
+
+{% load crispy_forms_tags %}
+
 {% block content %}
     <form method="POST">
         {% csrf_token %}
-        {{ form }}
+        {{ form|crispy }}
         <p><a href="/login">Login here</a></p>
         <button type="submit">Register</button>
     </form>
