--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -1,10 +1,12 @@
 {% extends "main/base.html" %}
 {% block title %}Login{% endblock %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
     <form method="POST" class="form-group">
         {% csrf_token %}
-        {{ form }}
+        {{ form|crispy }}
         <p><a href="/register">Register here</a></p>
         <button type="submit">Login</button>
     </form>
