--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -30,6 +30,20 @@
             margin-left: 160px;
             padding: 0px 10px;
         }
+
+        .witaj{
+            margin-top: 5%;
+            margin-bottom: 5%;
+        }
+        #opis{
+            padding-left: 5%;
+            padding-right: 5%;
+            text-align: center;
+        }
+        .przyciskWelcome{
+            margin-right: 5%;
+            margin-left: 5%;
+        }
     </style>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -40,11 +54,13 @@
 </head>
 <body>
     <div class="sidenav">
-        <a href="/home/">Home</a>
-        <a href="/login/">Login</a>
-        <a href="/register/">Register</a>
-        {% if user.is_authenticated %}
-        <a href="/logout/">Log out</a>
+        {% if not user.is_authenticated %}
+            <a href="/home/">Home</a>
+            <a href="/login/">Zaloguj</a>
+            <a href="/register/">Rejestracja</a>
+        {% elif  user.is_authenticated %}
+            <a href="/home/">Home</a>
+            <a href="/logout/">Wyloguj</a>
         {% endif %}
     </div>
 
@@ -56,8 +72,6 @@
             {% if user.is_authenticated %}
                 <p>Witaj, jesteś zalogowany!</p>
                 <p><a href="/logout">Logout here</a></p>
-            {% else %}
-                Nie jesteś zalogowany!
             {% endif %}
         </div>
     </div>
