--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,52 +1,10 @@
+{% load static %}
 <!doctype html>
 <html>
 <head>
-    <style type="text/css">
-        .sidenav{
-            height: 100%;
-            width: 160px;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color:#111;
-            overflow-x: :hidden;
-            padding-top: 20px;
-         }
 
-        .sidenav a{
-            padding: 6px 8px 6px 16px;
-            text-decoration: none;
-            font-size: 25px;
-            color: #818181;
-            display: block;
-        }
-
-        .sidenav a:hover{
-            color: #f1f1f1;
-        }
-
-        .main{
-            margin-left: 160px;
-            padding: 0px 10px;
-        }
-
-        .witaj{
-            margin-top: 5%;
-            margin-bottom: 5%;
-        }
-        #opis{
-            padding-left: 5%;
-            padding-right: 5%;
-            text-align: center;
-        }
-        .przyciskWelcome{
-            margin-right: 5%;
-            margin-left: 5%;
-        }
-    </style>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
