Dodanie prostego formularza do list pt. Nazwa i opis listy ale nie działa bo nie ma uzytkownikow w UZYTKOWNICY

--- a/WishLists/templates/createList.html
+++ b/WishLists/templates/createList.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 
-<h1>Tworzenie nowej listy</h1>
-
-
-
+  <h1>Create a New List</h1>
+  <form method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit">Create List</button>
+  </form>
 
 {% endblock %}
