--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -18,7 +18,7 @@
             <a href="/register/">Rejestracja</a>
         {% elif  user.is_authenticated %}
             <a href="/home/">Home</a>
-            <a href="/create/">Stwórz listę</a>
+            <a href="/createList/">Stwórz listę</a>
             <a href="/logout/">Wyloguj</a>
         {% endif %}
     </div>
