--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,3 +42,20 @@
     margin-right: 5%;
     margin-left: 5%;
 }
+
+
+.form-container label {
+    display: block; /* Ustawia etykiety jako blokowe, aby były nad polami */
+    margin-bottom: 5px; /* Opcjonalne: odstęp między etykietami a polami formularza */
+}
+
+.form-container input[type="text"],
+.form-container textarea {
+    width: 100%; /* Rozciąga pola formularza na całą szerokość kontenera */
+    padding: 8px;
+    margin-bottom: 10px; /* Odstęp między polami formularza */
+}
+
+#loginScreen{
+    float:right;
+}
