--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -24,14 +24,16 @@
     </div>
 
     <div id=content", name="content", class="main">
+        {% if user.is_authenticated %}
+            <div id="loginScreen">
+                <p>Witaj, jesteś zalogowany!  <a href="/logout">Wyloguj się</a></p>
+            </div>
+        {% endif %}
         <div class="row justify-content-center">
             {% block content %}
             {% endblock %}
 
-            {% if user.is_authenticated %}
-                <p>Witaj, jesteś zalogowany!</p>
-                <p><a href="/logout">Logout here</a></p>
-            {% endif %}
+
         </div>
     </div>
 
