--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -26,7 +26,7 @@
     <div id=content", name="content", class="main">
         {% if user.is_authenticated %}
             <div id="loginScreen">
-                <p>Witaj, jesteś zalogowany!  <a href="/logout">Wyloguj się</a></p>
+                <p>Witaj, <a href="/profile">{{ user.username }}</a>, jesteś zalogowany!  <a href="/logout">Wyloguj się</a></p>
             </div>
         {% endif %}
         <div class="row justify-content-center">
