Działa dodawanie 1 prezentu z ostatniego obiektu prezent

--- a/WishLists/templates/addPresentsToList.html
+++ b/WishLists/templates/addPresentsToList.html
@@ -29,7 +29,7 @@
             const newField = document.createElement("div");
             newField.innerHTML = `
                 <label>Nazwa prezentu:</label>
-                <input type="text" name="prezenty" class="form-control">
+                <input type="text" name="nazwaPrezentu" class="form-control">
                 <button type="button" class="btn btn-outline-danger btn-sm deleteRightButton" onclick="removePresentField(this)">Usuń prezent</button>
             `;
 
