--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,7 @@
 .createListForm{
     margin-bottom: 15%;
     margin-top: 3%;
+    margin-right: 2%;
 }
 .createListFormR{
     margin-bottom: 15%;
