--- a/WishLists/templates/addPresentsToList.html
+++ b/WishLists/templates/addPresentsToList.html
@@ -24,7 +24,7 @@
             </div>
 
             <button type="button" class="btn btn-outline-dark btn-lg createListForm" onclick="addPresentField()">Kolejny prezent</button>
-            <a href="/home/"><button type="button" class="btn btn-outline-dark btn-lg createListForm">Zakończ wpowadzenie prezentów</button></a>
+            <a href="/myLists/"><button type="button" class="btn btn-outline-dark btn-lg createListForm">Zakończ wpowadzenie prezentów</button></a>
             <button type="submit" class="btn btn-outline-dark btn-lg createListFormR" >Dodaj prezent do listy</button>
             <button type="reset" class="btn btn-outline-dark btn-lg createListFormR">Wyczyść</button>
 
