--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -19,6 +19,7 @@
         {% elif  user.is_authenticated %}
             <a href="/home/">Home</a>
             <a href="/createList/">Stwórz listę</a>
+            <a href="/myLists/">Moje listy</a>
             <a href="/logout/">Wyloguj</a>
         {% endif %}
     </div>
