--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -1,26 +1,26 @@
 {% extends "main/base.html" %}
-{% block title %} Profil użytkownika {% endblock %}
+{% block title %} Profil - {{ user_username}} {% endblock %}
 {% block content %}
 <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
     <div class="card p-4">
         <div class=" image d-flex flex-column justify-content-center align-items-center">
             <button class="btn btn-secondary"><img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100"/>
             </button>
-            <span class="name mt-3">{{ user.first_name }} {{ user.last_name }}</span> <span class="idd">@{{ user.username }}</span>
+            <span class="name mt-3">{{ user_first_name }} {{ user_last_name }}</span> <span class="idd">@{{ user_username }}</span>
             <div class="d-flex flex-row justify-content-center align-items-center gap-2"><span class="idd1">Oxc4c16a645_b21a</span>
                 <span><i class="fa fa-copy"></i></span></div>
-            <div class="d-flex flex-row justify-content-center align-items-center mt-3"><span class="number">1069 <span
-                    class="follow">Followers</span></span></div>
+            <div class="d-flex flex-row justify-content-center align-items-center mt-3"><span class="number">0 <span
+                    class="follow">list życzeń</span></span></div>
             <div class=" d-flex mt-2">
-                <button class="btn1 btn-dark">Edit Profile</button>
+                <button class="btn1 btn-dark">Edytuj profil</button>
             </div>
-            <div class="text mt-3">
-                <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span>
-            </div>
+<!--            <div class="text mt-3">-->
+<!--                <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span>-->
+<!--            </div>-->
             <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"><span><i
                     class="fa fa-twitter"></i></span> <span><i class="fa fa-facebook-f"></i></span> <span><i
                     class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span></div>
-            <div class=" px-2 rounded mt-4 date "><span class="join">Joined May,2021</span></div>
+            <div class=" px-2 rounded mt-4 date "><span class="join">{{ user_date_joined }}</span></div>
         </div>
     </div>
 </div>
