--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -11,9 +11,33 @@
                 <span><i class="fa fa-copy"></i></span></div>
             <div class="d-flex flex-row justify-content-center align-items-center mt-3"><span class="number">0 <span
                     class="follow">list życzeń</span></span></div>
+            {% if user.username == user_username %}
             <div class=" d-flex mt-2">
                 <button class="btn1 btn-dark">Edytuj profil</button>
             </div>
+            {% elif user.is_authenticated %}
+
+                {% if friend_status == "Wysłano" %}
+                    <div class=" d-flex mt-2">
+                        <a href="unfriend/"><button class="btn1 btn-dark">Anuluj zaproszenie</button></a>
+                    </div>
+                {% elif friend_status == "Oczekujące" %}
+                    <div class=" d-flex mt-2">
+                        <a href="accept-invite/"><button class="btn1 btn-dark">Zaakceptuj zaproszenie</button></a>
+                    </div>
+                    <div class=" d-flex mt-2">
+                        <a href="unfriend/"><button class="btn1 btn-dark">Usuń zaproszenie</button></a>
+                    </div>
+                {% elif friend_status == "Przyjaciele" %}
+                    <div class=" d-flex mt-2">
+                        <a href="unfriend/"><button class="btn1 btn-dark">Usuń znajomego</button></a>
+                    </div>
+                {% else %}
+                    <div class=" d-flex mt-2">
+                        <a href="invite/"><button class="btn1 btn-dark">Dodaj znajomego</button></a>
+                    </div>
+                {% endif %}
+            {% endif %}
 <!--            <div class="text mt-3">-->
 <!--                <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span>-->
 <!--            </div>-->
