--- a/UserProfiles/templates/profile/edit.html
+++ b/UserProfiles/templates/profile/edit.html
@@ -7,18 +7,22 @@
             <button class="btn btn-secondary"><img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100"/>
             </button>
             <div class=" d-flex mt-2">
-                <a href="avatar-change/"><button class="btn1 btn-dark">Zmień awatar</button></a>
+                <a href="avatar-change/">
+                    <button class="btn1 btn-dark">Zmień awatar</button>
+                </a>
             </div>
             <span class="name mt-3">{{ user_first_name }} {{ user_last_name }}</span> <span class="idd">@{{ user_username }}</span>
             <div class="d-flex flex-row justify-content-center align-items-center gap-2"><span class="idd1">Oxc4c16a645_b21a</span>
                 <span><i class="fa fa-copy"></i></span></div>
 
             <div class=" d-flex mt-2">
-                <a href="password-change/"><button class="btn1 btn-dark">Zmień hasło</button></a>
+                <a href="password-change/">
+                    <button class="btn1 btn-dark">Zmień hasło</button>
+                </a>
             </div>
-<!--            <div class="text mt-3">-->
-<!--                <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span>-->
-<!--            </div>-->
+            <!--            <div class="text mt-3">-->
+            <!--                <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span>-->
+            <!--            </div>-->
             <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"><span><i
                     class="fa fa-twitter"></i></span> <span><i class="fa fa-facebook-f"></i></span> <span><i
                     class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span></div>
