--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -17,34 +17,55 @@
             </div>
             {% elif user.is_authenticated %}
 
-                {% if friend_status == "Wysłano" %}
-                    <div class=" d-flex mt-2">
-                        <a href="unfriend/"><button class="btn1 btn-dark">Anuluj zaproszenie</button></a>
-                    </div>
-                {% elif friend_status == "Oczekujące" %}
-                    <div class=" d-flex mt-2">
-                        <a href="accept-invite/"><button class="btn1 btn-dark">Zaakceptuj zaproszenie</button></a>
-                    </div>
-                    <div class=" d-flex mt-2">
-                        <a href="unfriend/"><button class="btn1 btn-dark">Usuń zaproszenie</button></a>
-                    </div>
-                {% elif friend_status == "Przyjaciele" %}
-                    <div class=" d-flex mt-2">
-                        <a href="unfriend/"><button class="btn1 btn-dark">Usuń znajomego</button></a>
-                    </div>
-                {% else %}
-                    <div class=" d-flex mt-2">
-                        <a href="invite/"><button class="btn1 btn-dark">Dodaj znajomego</button></a>
-                    </div>
-                {% endif %}
+            {% if friend_status == "Wysłano" %}
+            <div class=" d-flex mt-2">
+                <a href="unfriend/">
+                    <button class="btn1 btn-dark">Anuluj zaproszenie</button>
+                </a>
+            </div>
+            {% elif friend_status == "Oczekujące" %}
+            <div class=" d-flex mt-2">
+                <a href="accept-invite/">
+                    <button class="btn1 btn-dark">Zaakceptuj zaproszenie</button>
+                </a>
+            </div>
+            <div class=" d-flex mt-2">
+                <a href="unfriend/">
+                    <button class="btn1 btn-dark">Usuń zaproszenie</button>
+                </a>
+            </div>
+            {% elif friend_status == "Przyjaciele" %}
+            <div class=" d-flex mt-2">
+                <a href="unfriend/">
+                    <button class="btn1 btn-dark">Usuń znajomego</button>
+                </a>
+            </div>
+            {% else %}
+            <div class=" d-flex mt-2">
+                <a href="invite/">
+                    <button class="btn1 btn-dark">Dodaj znajomego</button>
+                </a>
+            </div>
             {% endif %}
-<!--            <div class="text mt-3">-->
-<!--                <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span>-->
-<!--            </div>-->
-            <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"><span><i
-                    class="fa fa-twitter"></i></span> <span><i class="fa fa-facebook-f"></i></span> <span><i
-                    class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span></div>
-            <div class=" px-2 rounded mt-4 date "><span class="join">{{ user_date_joined }}</span></div>
+            {% endif %}
+            <div class=" px-2 rounded mt-4 date "><span class="join">Dołączył: {{ user_date_joined }}</span></div>
+        </div>
+    </div>
+</div>
+
+<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+    <div class="card p-4">
+        <div class=" image d-flex flex-column justify-content-center align-items-center">
+            Lista znajomych:
+            {% if friendsList %}
+            <ul>
+                {% for friend_username in friendsList %}
+                    <li>
+                        <a href="/profile/{{ friend_username }}">{{ friend_username }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+            {% endif %}
         </div>
     </div>
 </div>
