--- a/WishLists/templates/addPresentsToList.html
+++ b/WishLists/templates/addPresentsToList.html
@@ -2,19 +2,54 @@
 
 {% block content %}
     <div class="form-container">
-        <h1 class="witaj">Dodaj elementy do listy: {{ tytul }}</h1>
-        <h2 class="witaj">Opis listy to: {{ opis }} </h2>
-        <h1>Obecna zawartość listy</h1>
+        <h1 class="witaj2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
+                  <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
+                  <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0M7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0"/>
+            </svg>
+            {{ tytul }}
+        </h1>
+        <h5>
+            {{ opis }}
+        </h5>
+        <h1 class="witaj">Zawartość:</h1>
 
-        {% if zawartosc_listy %}
-            <ul>
-                {% for prezent in zawartosc_listy %}
-                    <li>{{ prezent.nazwaPrezentu }}</li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <p>Lista jest obecnie pusta, dodaj prezenty.</p>
-        {% endif %}
+        <div id="zawartosc">
+            {% if zawartosc_listy %}
+                <ul>
+                    {% for prezent in zawartosc_listy %}
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                                 <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                            </svg>
+                            <span class="elementLista">   {{ prezent.nazwaPrezentu }} </span>
+                            <span id="przyciskiListy">
+                                <a href="/deletePresent/{{ numerListy }}/{{ prezent.id }}/">
+                                    <button id="poNajechaniuRed" >
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                                  <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                                                  <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                                        </svg>
+                                    </button>
+                                </a>
+
+                            </span>
+
+
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p class="elementLista">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-bag-x" viewBox="0 0 16 16">
+                          <path fill-rule="evenodd" d="M6.146 8.146a.5.5 0 0 1 .708 0L8 9.293l1.146-1.147a.5.5 0 1 1 .708.708L8.707 10l1.147 1.146a.5.5 0 0 1-.708.708L8 10.707l-1.146 1.147a.5.5 0 0 1-.708-.708L7.293 10 6.146 8.854a.5.5 0 0 1 0-.708z"/>
+                          <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                    </svg>
+                    Lista jest obecnie pusta, dodaj prezenty.
+                </p>
+            {% endif %}
+
+        </div>
 
         <form method="post" enctype="multipart/form-data" id="DodajPrezentDoListyForm">
             {% csrf_token %}
@@ -23,10 +58,11 @@
                 <!-- Pole na pierwszy prezent -->
             </div>
 
-            <button type="button" class="btn btn-outline-dark btn-lg createListForm" onclick="addPresentField()">Kolejny prezent</button>
-            <a href="/myLists/"><button type="button" class="btn btn-outline-dark btn-lg createListForm">Zakończ wpowadzenie prezentów</button></a>
-            <button type="submit" class="btn btn-outline-dark btn-lg createListFormR" >Dodaj prezent do listy</button>
-            <button type="reset" class="btn btn-outline-dark btn-lg createListFormR">Wyczyść</button>
+            <div id="guzikAddPresent">
+                <button type="button" class="btn btn-outline-dark btn-lg createListForm" onclick="addPresentField()">Kolejny prezent</button>
+                <button type="submit" class="btn btn-outline-dark btn-lg createListForm" >Dodaj prezent do listy</button>
+                <a href="/myLists/"><button type="button" class="btn btn-outline-dark btn-lg createListFormR">Zakończ wpowadzenie prezentów</button></a>
+            </div>
 
         </form>
     </div>
@@ -36,6 +72,8 @@
 
         function removePresentField(button) {
             button.parentNode.remove();
+            i = 1;
+            ButtonOn();
         }
 
         function addPresentField() {
@@ -50,8 +88,24 @@
                 `;
 
                 prezentyDiv.appendChild(newField);
+
+                ButtonOff();
+                i = 2;
+
             }
-            i = 2;
+
+        }
+
+        function ButtonOff(){
+            var divContainer = document.getElementById("guzikAddPresent");
+            var przycisk = divContainer.querySelector("button");
+            przycisk.disabled = true;
+        }
+
+        function ButtonOn(){
+            var divContainer = document.getElementById("guzikAddPresent");
+            var przycisk = divContainer.querySelector("button");
+            przycisk.disabled = false;
         }
 
 
