--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,7 +65,6 @@
 }
 
 .createListForm{
-    margin-bottom: 15%;
     margin-top: 3%;
     margin-right: 2%;
 }
@@ -82,4 +81,34 @@
 
 #listy{
 
+}
+
+#guzikAddPresent{
+    margin-bottom: 15%;
+}
+
+#zawartosc ul{
+    list-style-type: none;
+}
+
+#zawartosc ul li{
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+
+.elementLista{
+    margin-top: 2%;
+    padding-left: 1%;
+    margin-right: 3%;
+}
+.witaj2{
+    margin-top: 5%;
+    margin-bottom: 2%;
+}
+#poNajechaniuRed:hover{
+    color: red;
+}
+#przyciskiListy button{
+    border: none;
+    background-color: white;
 }
