--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,6 +65,7 @@
 }
 
 .createListForm{
+    margin-bottom: 15%;
     margin-top: 3%;
     margin-right: 2%;
 }
@@ -82,6 +83,54 @@
 #listy{
 
 }
+
+#brakList{
+    font-style: italic;
+    color: red;
+}
+
+
+#listy ul{
+    list-style: none;
+}
+
+#pojedynczaLista{
+    border: 2px solid black;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 8%;
+    box-shadow: 5px 5px 5px grey;
+}
+#przyciskiListy{
+    text-align: center;
+}
+
+#przyciskiListy button{
+    border: none;
+    background-color: white;
+}
+
+#poNajechaniuBlue:hover{
+    color: blue;
+}
+
+#poNajechaniuGreen:hover{
+    color: green;
+}
+
+#poNajechaniuRed:hover{
+    color: red;
+}
+
+#brakList{
+    text-align: center;
+}
+
+.przyciskBrakList{
+    text-decoration: none;
+}
+
+
 
 #guzikAddPresent{
     margin-bottom: 15%;
