--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -7,13 +7,12 @@
             <button class="btn btn-secondary"><img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100"/>
             </button>
             <span class="name mt-3">{{ user_first_name }} {{ user_last_name }}</span> <span class="idd">@{{ user_username }}</span>
-            <div class="d-flex flex-row justify-content-center align-items-center gap-2"><span class="idd1">Oxc4c16a645_b21a</span>
-                <span><i class="fa fa-copy"></i></span></div>
+
             <div class="d-flex flex-row justify-content-center align-items-center mt-3"><span class="number">0 <span
                     class="follow">list życzeń</span></span></div>
             {% if user.username == user_username %}
             <div class=" d-flex mt-2">
-                <button class="btn1 btn-dark">Edytuj profil</button>
+                <a href="edit/"><button class="btn1 btn-dark">Edytuj profil</button></a>
             </div>
             {% elif user.is_authenticated %}
 
@@ -48,7 +47,7 @@
             </div>
             {% endif %}
             {% endif %}
-            <div class=" px-2 rounded mt-4 date "><span class="join">Dołączył: {{ user_date_joined }}</span></div>
+            <div class=" px-2 rounded mt-4 date "><span class="join">Dołączył: {{ user_date_joined | date:"d.m.Y"}}</span></div>
         </div>
     </div>
 </div>
@@ -60,9 +59,9 @@
             {% if friendsList %}
             <ul>
                 {% for friend_username in friendsList %}
-                    <li>
-                        <a href="/profile/{{ friend_username }}">{{ friend_username }}</a>
-                    </li>
+                <li>
+                    <a href="/profile/{{ friend_username }}">{{ friend_username }}</a>
+                </li>
                 {% endfor %}
             </ul>
             {% endif %}
