obsługa wyszukiwania nieistniejących użytkowników

--- a/UserProfiles/templates/profile/search_for_user.html
+++ b/UserProfiles/templates/profile/search_for_user.html
@@ -8,7 +8,8 @@
             <form method="POST" action="{% url 'search_for_user' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Szukaj</button>
+                <p style="color:red; font-size:10px; text-align:center;"> {{ warning }} </p>
+                <p style="text-align: center;"><button type="submit">Szukaj</button></p>
             </form>
         </div>
     </div>
