tłumaczenie strony rejestracji + logowania

--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -7,7 +7,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ form|crispy }}
-        <p><a href="/login">Login here</a></p>
-        <button type="submit">Register</button>
+        <p><a href="/login">Strona logowania</a></p>
+        <button type="submit">Zarejestruj się</button>
     </form>
 {% endblock %}
