--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -7,7 +7,7 @@
     <form method="POST" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
-        <p><a href="/register">Register here</a></p>
-        <button type="submit">Login</button>
+        <p><a href="/register">Zarejestruj się tutaj</a></p>
+        <button type="submit">Zaloguj się</button>
     </form>
 {% endblock %}
