Dodawanie prezentów i poprawki

--- a/WishLists/templates/addPresentsToList.html
+++ b/WishLists/templates/addPresentsToList.html
@@ -25,10 +25,10 @@
                             <span class="elementLista">   {{ prezent.nazwaPrezentu }} </span>
                             <span id="przyciskiListy">
                                 <a href="/deletePresent/{{ numerListy }}/{{ prezent.id }}/">
-                                    <button id="poNajechaniuRed" >
+                                    <button id="poNajechaniuRed" class="trashRight">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                                                  <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-                                                  <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                                              <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                                              <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                                         </svg>
                                     </button>
                                 </a>
@@ -57,57 +57,58 @@
             <div id="prezenty">
                 <!-- Pole na pierwszy prezent -->
             </div>
-
-            <div id="guzikAddPresent">
-                <button type="button" class="btn btn-outline-dark btn-lg createListForm" onclick="addPresentField()">Kolejny prezent</button>
-                <button type="submit" class="btn btn-outline-dark btn-lg createListForm" >Dodaj prezent do listy</button>
-                <a href="/myLists/"><button type="button" class="btn btn-outline-dark btn-lg createListFormR">Zakończ wpowadzenie prezentów</button></a>
-            </div>
+          <div id="guzikAddPresent">
+            <button type="button" class="btn btn-outline-dark btn-lg createListForm" onclick="addPresentField()">Dodaj następny prezent</button>
+            <button type="submit" class="btn btn-outline-dark btn-lg createListForm hidden" >Dodaj prezent do listy</button>
+            <a href="/myLists/"><button type="button" class="btn btn-outline-dark btn-lg createListFormR">Zakończ wprowadzanie prezentów</button></a>
+          </div>
 
         </form>
     </div>
 
-    <script>
-        var i = 1;
+<script>
+    var i = 1;
 
-        function removePresentField(button) {
-            button.parentNode.remove();
-            i = 1;
-            ButtonOn();
+    function removePresentField(button) {
+        button.parentNode.remove();
+        i = 1; // Reset the flag to enable adding new presents
+        toggleButtons();
+    }
+
+    function addPresentField() {
+        const kolejnyPrezentButton = document.querySelector('#guzikAddPresent button:nth-child(1)');
+        const dodajDoListyButton = document.querySelector('#guzikAddPresent button:nth-child(2)');
+
+        if (i === 1) {
+            const prezentyDiv = document.getElementById("prezenty");
+            const newField = document.createElement("div");
+            newField.innerHTML = `
+                <label>Nazwa prezentu:</label>
+                <input type="text" name="nazwaPrezentu" class="form-control">
+                <button type="button" class="btn btn-outline-danger btn-sm deleteRightButton" onclick="removePresentField(this)">Usuń prezent</button>
+            `;
+
+            prezentyDiv.appendChild(newField);
+
+            toggleButtons();
+            i = 2;
         }
+    }
 
-        function addPresentField() {
+    function toggleButtons() {
+        const kolejnyPrezentButton = document.querySelector('#guzikAddPresent button:nth-child(1)');
+        const dodajDoListyButton = document.querySelector('#guzikAddPresent button:nth-child(2)');
 
-            if( i == 1){
-                const prezentyDiv = document.getElementById("prezenty");
-                const newField = document.createElement("div");
-                newField.innerHTML = `
-                    <label>Nazwa prezentu:</label>
-                    <input type="text" name="nazwaPrezentu" class="form-control">
-                    <button type="button" class="btn btn-outline-danger btn-sm deleteRightButton" onclick="removePresentField(this)">Usuń prezent</button>
-                `;
+        kolejnyPrezentButton.classList.toggle('hidden');
+        dodajDoListyButton.classList.toggle('hidden');
+    }
 
-                prezentyDiv.appendChild(newField);
-
-                ButtonOff();
-                i = 2;
-
-            }
-
-        }
-
-        function ButtonOff(){
-            var divContainer = document.getElementById("guzikAddPresent");
-            var przycisk = divContainer.querySelector("button");
-            przycisk.disabled = true;
-        }
-
-        function ButtonOn(){
-            var divContainer = document.getElementById("guzikAddPresent");
-            var przycisk = divContainer.querySelector("button");
-            przycisk.disabled = false;
-        }
+    // Reverting to the initial state after clicking "Dodaj prezent do listy"
+    document.querySelector('#guzikAddPresent button:nth-child(2)').addEventListener('click', function () {
+        i = 1;
+        toggleButtons();
+    });
+</script>
 
 
-    </script>
 {% endblock %}
