--- a/WishLists/templates/myLists.html
+++ b/WishLists/templates/myLists.html
@@ -41,7 +41,7 @@
                 </div>
                 <h2 class="tytulListy">{{ lista.tytul }}</h2>
                 <span>{{ lista.opis }}</span><br>
-                <div id="przyciskiListy">
+                <div id="przyciskiMojeListy">
                     <div class="row">
                         <div class="col-sm-4">
                             <form method="POST" action="{% url 'specificList' lista.id %}">
