--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/x-icon" href="/static/favicon.png">
     <meta charset="utf-8">
     <title>{% block title %} Present Planner {% endblock %}</title>
 </head>
@@ -34,8 +35,11 @@
                     <li class="nav-item py-2 py-sm-0">
                         <a href="/login/" class="nav-link text-white">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                 class="bi bi-house-door-fill" viewBox="0 0 16 16">
-                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>
+                                 class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                      d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
+                                <path fill-rule="evenodd"
+                                      d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
                             </svg>
                             <span class="fs-4 ms-3 d-none d-sm-inline">
 										Zaloguj
@@ -45,15 +49,16 @@
                     <li class="nav-item py-2 py-sm-0">
                         <a href="/register/" class="nav-link text-white">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                 class="bi bi-house-door-fill" viewBox="0 0 16 16">
-                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>
+                                 class="bi bi-r-square-fill" viewBox="0 0 16 16">
+                                <path d="M6.835 5.092v2.777h1.549c.995 0 1.573-.463 1.573-1.36 0-.913-.596-1.417-1.537-1.417z"/>
+                                <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.5 4.002h3.11c1.71 0 2.741.973 2.741 2.46 0 1.138-.667 1.94-1.495 2.24L11.5 12H9.98L8.52 8.924H6.836V12H5.5z"/>
                             </svg>
                             <span class="fs-4 ms-3 d-none d-sm-inline">
 										Rejestracja
 									</span>
                         </a>
                     </li>
-                    {% elif  user.is_authenticated %}
+                    {% elif user.is_authenticated %}
                     <li class="nav-item py-2 py-sm-0">
                         <a href="/home/" class="nav-link text-white">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
@@ -101,7 +106,6 @@
 									</span>
                         </a>
                     </li>
-                    {% endif %}
                 </ul>
             </div>
             <div class="dropdown open p-3">
@@ -118,27 +122,33 @@
 								</span>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="triggerId">
-                    <button class="dropdown-item" href="/createList/">
-                        Stwórz listę
+                    <button class="dropdown-item">
+                        <a href="/createList/">
+                            Stwórz listę
+                        </a>
                     </button>
-                    <button class="dropdown-item" href="/logout/">
-                        Wyloguj
+                    <button class="dropdown-item">
+                        <a href="/logout/">
+                            Wyloguj
+                        </a>
                     </button>
                 </div>
+                {% endif %}
             </div>
         </div>
         <div class="col-md-10">
-        <div id="content" name="content" class="main">
-            <div class="row justify-content-center">
-                {% if user.is_authenticated %}
-                    <p id="loginScreen">Witaj, <a href="/profile/{{ user.username }}/">{{ user.username }}</a>, jesteś zalogowany! <a
-                        href="/logout">Wyloguj się</a></p>
-                {% endif %}
-                {% block content %}
-                {% endblock %}
+            <div name="content" class="main">
+                <div class="row justify-content-center">
+                    {% if user.is_authenticated %}
+                    <p id="loginScreen">Witaj, <a href="/profile/{{ user.username }}/">{{ user.username }}</a>, jesteś
+                        zalogowany! <a
+                                href="/logout">Wyloguj się</a></p>
+                    {% endif %}
+                    {% block content %}
+                    {% endblock %}
+                </div>
             </div>
         </div>
-    </div>
     </div>
 
 </div>
