--- a/WishLists/templates/addPresentsToList.html
+++ b/WishLists/templates/addPresentsToList.html
@@ -13,7 +13,7 @@
     <h5>
         {{ opis }}
     </h5>
-    <h1 class="witaj">Zawartość:</h1>
+    <h1 class="wyrownanieDoLewej">Zawartość:</h1>
 
     <div id="zawartosc">
         {% if zawartosc_listy %}
