--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -11,8 +11,8 @@
             {{ form|crispy }}
             <br>
             <div class="d-flex justify-content-between">
-                <button type="submit" class="btn btn-outline-dark btn-lg przyciskRejestracja">Zaloguj się</button>
-                <button type="submit" class="btn btn-outline-dark btn-lg przyciskRejestracja ml-auto">
+                <button type="submit" class="btn btn-lg przyciskRejestracja">Zaloguj się</button>
+                <button type="submit" class="btn btn-lg przyciskRejestracja ml-auto">
                     <a href="/register">Zarejestruj się tutaj</a>
                 </button>
             </div>
