--- a/WishLists/templates/addPresentsToList.html
+++ b/WishLists/templates/addPresentsToList.html
@@ -108,7 +108,7 @@
             newField.innerHTML = `
                 <label>Nazwa prezentu:</label>
                 <input type="text" name="nazwaPrezentu" class="form-control">
-                <button type="button" class="btn btn-outline-danger btn-sm deleteRightButton" onclick="removePresentField(this)">Usuń prezent</button>
+                <button type="button" class="btn btn-sm deleteRightButton" onclick="removePresentField(this)">Usuń prezent</button>
             `;
 
             prezentyDiv.appendChild(newField);
