--- a/WishLists/templates/myLists.html
+++ b/WishLists/templates/myLists.html
@@ -10,12 +10,13 @@
         </svg>
         Twoje Listy
     </h1>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% if messages %}
     <div id="alert-container">
         {% for message in messages %}
         <div class="alert alert-info alert-dismissible fade show" role="alert">
             {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <button type="button" class="close przyciskAlert" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
@@ -23,7 +24,6 @@
     </div>
 
     <script>
-        // Zamykanie komunikatów po 5 sekundach
         setTimeout(function() {
           $('.alert').alert('close');
         }, 3000);
@@ -98,7 +98,7 @@
         <h1>Przejdź do Stwórz listę aby stworzyć swoją pierwszą listę!</h1>
         <br>
         <a href="/createList/">
-            <button type="button" class="btn btn-outline-dark btn-lg przyciskWelcome ">Stwórz listę</button>
+            <button type="button" class="btn btn-lg przyciskWelcome ">Stwórz listę</button>
         </a>
     </div>
     {% endif %}
