--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,9 +68,15 @@ body{
 .przyciskWelcome{
     margin-right: 5%;
     margin-left: 5%;
-    background-color: #0077B6;
+    background-color: #0096C7;
     color: white;
-    border: 1px solid #0077B6;
+    border: 1px solid #0096C7;
+}
+
+.przyciskWelcome:hover{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
 }
 
 .form-container {
@@ -127,6 +133,19 @@ body{
 
 .deleteRightButton{
     margin-bottom: 2%;
+    background-color: #FF3333;
+    border-radius: 5px;
+    font-weight: bold;
+    color: white;
+    border: 2px solid #FF3333;
+}
+
+.deleteRightButton:hover{
+    background-color: white;;
+    border-radius: 5px;
+    font-weight: bold;
+    color: #FF3333;
+    border: 2px solid #FF3333;
 }
 
 #listy{
@@ -244,4 +263,8 @@ body{
     margin-top: 5%;
     margin-bottom: 5%;
     width: 100%;
+}
+
+.przyciskAlert{
+    border: none;
 }
