--- a/WishLists/templates/addPresentsToList.html
+++ b/WishLists/templates/addPresentsToList.html
@@ -74,13 +74,13 @@
             <!-- Pole na pierwszy prezent -->
         </div>
         <div id="guzikAddPresent">
-            <button type="button" class="btn btn-outline-dark btn-lg createListForm" onclick="addPresentField()">Dodaj
+            <button type="button" class="btn rounded-pill btn-lg createListForm" onclick="addPresentField()">Dodaj
                 następny prezent
             </button>
-            <button type="submit" class="btn btn-outline-dark btn-lg createListForm hidden">Dodaj prezent do listy
+            <button type="submit" class="btn rounded-pill btn-lg createListForm hidden">Dodaj prezent do listy
             </button>
             <a href="/myLists/">
-                <button type="button" class="btn btn-outline-dark btn-lg createListFormR">Zakończ wprowadzanie
+                <button type="button" class="btn rounded-pill btn-lg createListFormR">Zakończ wprowadzanie
                     prezentów
                 </button>
             </a>
