--- a/WishLists/templates/createList.html
+++ b/WishLists/templates/createList.html
@@ -21,8 +21,8 @@
 <!--            </div>-->
 
            <!-- <button type="button" class="btn btn-outline-dark btn-lg createListForm" onclick="addPresentField()">Dodaj prezent</button> -->
-            <button type="submit" class="btn btn-lg createListFormR" >Stwórz listę</button>
-            <button type="reset" class="btn btn-lg createListFormR">Wyczyść formularz</button>
+            <button type="submit" class="btn btn-lg rounded-pill createListFormR" >Stwórz listę</button>
+            <button type="reset" class="btn btn-lg rounded-pill createListFormR">Wyczyść formularz</button>
 
 
 
