--- a/WishLists/templates/mySpecificList.html
+++ b/WishLists/templates/mySpecificList.html
@@ -26,10 +26,10 @@
                 </svg>
                 <span class="elementLista">   {{ prezent.nazwaPrezentu }} </span>
             </li>
-            <a href="/myLists/">
-                <button type="submit" class="btn btn-lg createListFormR" >Powrót</button>
-            </a>
             {% endfor %}
+            <a href="/myLists/">
+                <button type="submit" class="btn btn-lg rounded-pill createListFormR" >Powrót</button>
+            </a>
         </ul>
         {% else %}
         <p class="elementLista">
