--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -11,8 +11,8 @@
             {{ form|crispy }}
             <br>
             <div class="d-flex justify-content-between">
-                <button type="submit" class="btn btn-outline-dark btn-lg przyciskRejestracja">Zarejestruj się</button>
-                <button type="submit" class="btn btn-outline-dark btn-lg przyciskRejestracja ml-auto">
+                <button type="submit" class="btn rounded-pill btn-lg przyciskRejestracja">Zarejestruj się</button>
+                <button type="submit" class="btn rounded-pill btn-lg przyciskRejestracja ml-auto">
                     <a href="/login">Strona logowania</a>
                 </button>
             </div>
