Modyfikacja modelu od prezentów + dodanie przycisków do rezerwacji prezentów

--- a/WishLists/templates/mySpecificList.html
+++ b/WishLists/templates/mySpecificList.html
@@ -24,11 +24,24 @@
                      viewBox="0 0 16 16">
                     <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
                 </svg>
-                <span class="elementLista">   {{ prezent.nazwaPrezentu }} </span>
+                <span class="elementLista">
+                    {{ prezent.nazwaPrezentu }}
+                    {% if request.user.id != ownerId %}
+                        {% if loginRezerwacji == null %}
+                            <a href="reserve/{{ prezent.id }}"><button class="btn btn-lg rounded-pill przyciskWelcome">Zarezerwuj {{ loginRezerwacji }} == null</button></a>
+                        {% elif loginRezerwacji == request.user.username %}
+                            <a href="cancel-reservation/{{ prezent.id }}"><button
+                                    class="btn btn-lg rounded-pill przyciskWelcome">Anuluj rezerwację {{ loginRezerwacji }} == {{ request.user.username }}</button></a>
+                        {% else %}
+                            <button class="btn btn-lg rounded-pill przyciskWelcome" disabled>Zarezerwowany {{ loginRezerwacji }} != {{ request.user.username }}</button>
+                        {% endif %}
+                    {% endif %}
+
+                </span>
             </li>
             {% endfor %}
             <a href="/myLists/">
-                <button type="submit" class="btn btn-lg rounded-pill createListFormR" >Powrót</button>
+                <button type="submit" class="btn btn-lg rounded-pill createListFormR">Powrót</button>
             </a>
         </ul>
         {% else %}
